--- a/src/index.html
+++ b/src/index.html
@@ -80,5 +80,10 @@
 				<span class="icons__icon icon-logo"></span>
 			</div>
 		</div>
+
+		<a class="github" href="https://github.com/bszabo28/icons-svg">
+			<span class="icons__icon icon-github"></span>
+			<span>Vissza a GITHUB oldalra</span>
+		</a>
 	</body>
 </html>
