--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 
 		<div class="icons-container">
 			<div class="icons">
-				<span></span>
+				<h1 class="icons__heading--1"></h1>
 				<span class="icons__icon icon-account-authorities"></span>
 				<span class="icons__icon icon-account-switch"></span>
 				<span class="icons__icon icon-help"></span>
@@ -33,7 +33,7 @@
 			</div>
 
 			<div class="icons">
-				<span></span>
+				<h1 class="icons__heading--1"></h1>
 				<span class="icons__icon icon-account-authorities"></span>
 				<span class="icons__icon icon-account-switch"></span>
 				<span class="icons__icon icon-help"></span>
@@ -49,7 +49,7 @@
 			</div>
 
 			<div class="icons">
-				<span></span>
+				<h1 class="icons__heading--1"></h1>
 				<span class="icons__icon icon-account-authorities"></span>
 				<span class="icons__icon icon-account-switch"></span>
 				<span class="icons__icon icon-help"></span>
@@ -65,7 +65,7 @@
 			</div>
 
 			<div class="icons">
-				<span></span>
+				<h1 class="icons__heading--1"></h1>
 				<span class="icons__icon icon-account-authorities"></span>
 				<span class="icons__icon icon-account-switch"></span>
 				<span class="icons__icon icon-help"></span>
@@ -81,9 +81,11 @@
 			</div>
 		</div>
 
-		<a class="github" href="https://github.com/bszabo28/icons-svg">
-			<span class="icons__icon icon-github"></span>
-			<span>Vissza a GITHUB oldalra</span>
-		</a>
+		<div class="github">
+			<a class="github__link" href="https://github.com/bszabo28/icons-svg">
+				<span class="icons__icon icon-github"></span>
+				<span>Vissza a GITHUB oldalra</span>
+			</a>
+		</div>
 	</body>
 </html>
