--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,18 @@
 		<!--[if lt IE 7]>
 			<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
 		<![endif]-->
+		<header>
+			<p class="description">
+				Ez az oldal egy példa oldal az svg ikonok használatára. <br>
+				A technika előnyeiről <a href="https://css-tricks.com/icon-fonts-vs-svg/" target="_blank">itt</a>
+				található bővebb információ. <br>
+				Az ikonokat - kivéve a github ikont - az <a href="https://inkscape.org/en/" target="_blank">inkscape</a> programmal
+				átnéztem, a dokumentum méretet egységesen 24 képpont méretűre állítottam. <br>
+				Az svg ikon készítéshez jó kiinduló pont <a href="https://icomoon.io" target="_blank">IcoMoon</a> weboldala.
+			</p>
+		</header>
 
-		<div class="icons-container">
+		<main class="icons-container">
 			<div class="icons">
 				<h1 class="icons__heading--1"></h1>
 				<span class="icons__icon icon-account-authorities"></span>
@@ -79,13 +89,13 @@
 				<span class="icons__icon icon-account-viewer"></span>
 				<span class="icons__icon icon-logo"></span>
 			</div>
-		</div>
+		</main>
 
-		<div class="github">
+		<footer class="github">
 			<a class="github__link" href="https://github.com/bszabo28/icons-svg">
 				<span class="icons__icon icon-github"></span>
 				<span>Vissza a GITHUB oldalra</span>
 			</a>
-		</div>
+		</footer>
 	</body>
 </html>
