dev mode instead production in docs

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 				található bővebb információ. <br>
 				Az ikonokat - kivéve a github ikont - az <a href="https://inkscape.org/en/" target="_blank">inkscape</a> programmal
 				átnéztem, a dokumentum méretet egységesen 24 képpont méretűre állítottam. <br>
-				Az svg ikon készítéshez jó kiinduló pont <a href="https://icomoon.io" target="_blank">IcoMoon</a> weboldala.
+				Az svg ikon készítéshez jó kiinduló pont az <a href="https://icomoon.io" target="_blank">IcoMoon</a> weboldala.
 			</p>
 		</header>
 
